--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,8 +16,14 @@ layout: default
     {% include news.html %}
   {% endif %}
 
+  {% if page.projects %}
+    {% include projects.html %}
+  {% endif %}
+
   {% if page.social %}
     {% include social.html %}
   {% endif %}
+
+
 
 </div>
