--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,12 @@
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
+
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet">
+
 </head>
 <body>
    <div class="wrapper">
@@ -29,12 +35,13 @@
          <img src="{{site.logo | relative_url}}" alt="Logo" />
          {% endif %}
          <p>{{ site.description | default: site.github.project_tagline }}</p>
-         {% if site.github.is_project_page %}
-         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+         {% if site.github.show_github_url %}
+         <!-- <p class="view"><a href="{{site.github.tm_github_url}}">GitHub <small>{{ site.github.tm_github_url }}</small></a></p> -->
+         <p class="view"><a href="{{site.github.tm_github_url}}">GitHub</a> | <a href="{{site.github.tm_google_scholar}}">Google Scholar</a> </p>
          {% endif %}
-         {% if site.github.is_user_page %}
-         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-         {% endif %}
+         <!-- {% if site.github.show_google_scholar %}
+         <p class="view"><a href="{{site.github.tm_google_scholar}}">Google Scholar</a></p>
+         {% endif %} -->
          {% if site.show_downloads %}
          <ul class="downloads">
             <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
