--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,15 @@
 @font-face { font-family: 'Noto Sans'; font-weight: 700; font-style: italic; src: url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.eot"); src: url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.eot?#iefix") format("embedded-opentype"), local("Noto Sans Bold Italic"), local("Noto-Sans-700italic"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff2") format("woff2"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff") format("woff"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.ttf") format("truetype"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.svg#NotoSans") format("svg"); }
 .highlight table td { padding: 5px; }
 
+.open-sans-font {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
 .highlight table pre { margin: 0; }
 
 .highlight .cm { color: #999988; font-style: italic; }
@@ -128,8 +137,9 @@
 
 .highlight { background-color: #f8f8f8; }
 
-body { background-color: #fff; padding: 50px; font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; color: #727272; font-weight: 400; }
+body { background-color: #fff; padding: 50px; font-family: "Open Sans"; font: 13px/1.5 "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; color: #727272; font-weight: 500; }
 
+/* body { background-color: #fff; padding: 50px; font-family: $open-sans-font; color: #727272; } */
 h1, h2, h3, h4, h5, h6 { color: #222; margin: 0 0 20px; }
 
 p, ul, ol, table, pre, dl { margin: 0 0 20px; }
