--- a/css/style.css
+++ b/css/style.css
@@ -182,15 +182,7 @@ img { max-width: 100%; }
 
 kbd { background-color: #fafbfc; border: 1px solid #c6cbd1; border-bottom-color: #959da5; border-radius: 3px; box-shadow: inset 0 -1px 0 #959da5; color: #444d56; display: inline-block; font-size: 11px; line-height: 10px; padding: 3px 5px; vertical-align: middle; }
 
-header { width: 210px; float: left; position: fixed; -webkit-font-smoothing: subpixel-antialiased; display: flex; flex-direction: column;}
-
-.header :first-child {
-  width: 100px;
-}
-
-.box > * {
-  flex: 0 0 auto;
-}
+header { width: 210px; float: left; position: fixed; -webkit-font-smoothing: subpixel-antialiased; }
 
 ul.downloads { list-style: none; height: 40px; padding: 0; background: #f4f4f4; border-radius: 5px; border: 1px solid #e0e0e0; width: 270px; }
 
@@ -212,7 +204,7 @@ strong { color: #222; font-weight: 700; }
 
 .downloads a strong { font-size: 14px; display: block; color: #222; }
 
-section { width: 600px; float: right; padding-bottom: 50px; }
+section { width: 500px; float: right; padding-bottom: 50px; }
 
 small { font-size: 11px; }
 
